Fixed enable of close button after wait timeout expired and auto close is enabled.